scribble-test/src/test/resources/good/efsm/gcontinue/choiceunguarded/Test07b.scr
module good.efsm.gcontinue.choiceungaurded.Test07b;


global protocol Proto1(role A, role B)
{
	rec X
	{
		choice at A  // Testing EFSM building rec with multiple "enactings"
		{
			3() from A to B;
			choice at A
			{
				choice at A
				{
					1() from A to B;
					continue X;
				}
				or
				{
					//2() from A to B;
					continue X;  // (and choice-unguarded continue) 
				}
			}
			or
			{
				6() from A to B;
			}
		}
		or
		{
			4() from A to B;
		}
	}
}

