scribble-test/src/test/resources/bad/wfchoice/gchoice/Choice09a.scr
module bad.wfchoice.gchoice.Choice09a;


global protocol Proto1(role A, role B, role C)
{
	3() from A to C;
	rec Y
	{
		2() from A to B;  // Uncomment is bad (non-enabled B / non-disjoint labels)
		2a() from B to A;
		rec X
		{
			1() from A to B;
			choice at A
			{
				2() from A to B;
				continue X;  // Testing project choice subject "inference", and testing continue-only choice block
			}
			or
			{
				continue Y;  // Different continue-only-blocks, tests FSM building
			}
			or
			{
				4() from A to B;
			}
		}
	}
}

